Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100333

MapQuickItem drawn at wrong location after vertical resize

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.0, 6.6.0
    • 5.15.2
    • Location
    • None
    • Windows
    • c26af08e4 (dev), d588654d5 (6.5)

    Description

      It seems MapQuickItems can be drawn at the wrong location after a window is vertically resized. (It seems to work OK if window is resized horizontally, or in both directions).

      This can be seem with the Map Viewer (QML) example in Creator on Windows with Qt 5.15.2.

      Run the example, and you see the location of the Qt Company is:

      If you resize the window by dragging the window at the bottom middle (not bottom right corner), the Qt Company location moves:

      If you then resize horizontally or zoom in, the MapQuickItem is redrawn in the correct position.

      I've also seen an example in a bigger app where the MapQuickItems are at the wrong location when the widget is first shown - but this seems the easiest way to demonstrate the problem.

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            matthias_rauter Matthias Rauter
            srcejon Jon Beniston
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes