Update MapQuickItems correctly after a size change

The position of MapQuickItems was not updated after a height change.
The function setCameraData(...) did not update the position.

Fixes: QTBUG-100333
Change-Id: I86310000d04b00bfd3de0e7ef3cdc854f2b08a46
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit c26af08e42d535fe3ed81c1506ee6e5d3fc35d1c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>